Update z-index of parent element to the tooltip Source: https://foundation.zurb.com/forum/posts/50229-fixing-the-sticky-dropdown-z-index-issue

--- a/styles/components/_usa_banner.scss
+++ b/styles/components/_usa_banner.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   padding: ($gap / 2) $gap;
-  z-index: 5;
+  z-index: 15;
 
   img {
     flex-grow: 0;
